--- a/ContactList/index.html
+++ b/ContactList/index.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
   <head>
     <title>Angular 2 and Redux Tutorial: Contact List</title>
     <meta charset="UTF-8">
@@ -20,6 +20,6 @@
   </head>
   <!-- 3. Display the application -->
   <body>
-    <contact-list>Loading...</contact-list>
+		<contact-list>Loading...</contact-list>
   </body>
 </html>
