--- a/ContactList/app/contact-list.html
+++ b/ContactList/app/contact-list.html
@@ -10,18 +10,23 @@
 			<small>@hdjirdeh</small>
 		</div>
 	</header>
-	<input #newContact class="add-contact" placeholder="Add Contacts"
+	<review-list></review-list>
+	<!--<input #newContact class="add-contact" placeholder="Add Contacts"
 	      (keyup.enter)="addContact(newContact.value); newContact.value='' ">
 	<ul class="contact-list">
 	  <li *ngFor="let contact of store.contacts">
 	  	<contact [contact]="contact"></contact>
 	  </li>
 	</ul>
-	
+
+	<div *ngFor="let rev of newReviews">
+		<review></review>
+	</div>
+
 	<div *ngFor="let contact of something">
 		<social-media-link>this other</social-media-link>
 	</div>
 
 	<social-media-link>this other</social-media-link>
-	<div>1155dfdf955159dfdffffffff</div>
+	<div>1155dfdf955159dfdffffffff</div>-->
 </div>
