--- a/ContactList/index.html
+++ b/ContactList/index.html
@@ -19,7 +19,8 @@
     </script>
   </head>
   <!-- 3. Display the application -->
-  <body>
+  <body>dfdf
+		<review></review>
 		<contact-list>Loading...</contact-list>
   </body>
 </html>
